<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="name_view">Name</string>
    <string name="toppings_header">Toppings</string>
    <string name="wc_checkbox">Whipped Cream</string>
    <string name="c_checkbox">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_num">0</string>
    <string name="decrement_button_text">-</string>
    <string name="increment_button_text">+</string>
    <string name="price_text">Price :</string>
    <string name="price">$0</string>
    <string name="order_button_text">Order</string>
</resources>
